# piazza

./: .coverage  .dockerignore  .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  DESIGN.md  Makefile  README.md  README_en.md  README_zh.md  mkdocs.yml  pyproject.toml
.github/workflows/: ci.yml  docker-safety.yml  docker.yml  release.yml
docker/: Dockerfile  docker-compose.yaml  entrypoint.sh
docs/: DESIGN.md  DESIGN_EN.md  MVP.md  changelog.md  index.md
docs/api/: backends.md  bus.md  client.md  frontends.md  index.md  server.md  transport.md  types.md
docs/architecture/: overview.md
docs/examples/: index.md
docs/stylesheets/: custom.css
docs/usage/: admin.md  cli.md  index.md  installation.md  irc.md  quickstart.md  remote.md
piazza/: pyproject.toml
piazza-client/: README.md  pyproject.toml
piazza-client/src/piazza_client/: __init__.py  cli.py  client.py  transport.py
piazza-client/src/piazza_client/_vendor/: httpclient.py  sse.py
piazza/src/piazza/: __init__.py  bus.py  client.py  protocols.py  serializers.py  transport.py  transport_http.py  types.py
piazza/src/piazza/_vendor/: httpserver.py  retry.py  sse.py
piazza/src/piazza/admin/: auth.py  server.py
piazza/src/piazza/backends/: memory.py  sqlite.py
piazza/src/piazza/frontends/: __init__.py  base.py  http.py
piazza/tests/: test_bus.py  test_client.py  test_input_validation.py  test_irc_frontend.py  test_queue.py  test_remote_transport.py  test_token_store.py
src/piazza/: __init__.py  bus.py  cli.py  client.py  protocols.py  server.py  storage.py  token_store.py  transport.py  transport_http.py  types.py
src/piazza/_vendor/: __init__.py  retry.py  sse.py  structlog.py
src/piazza/admin/: __init__.py  admin.html  auth.py  handlers.py  server.py  static.py
src/piazza/admin/routes/: __init__.py  _shared.py  channels.py  dashboard.py  messages.py  subscriptions.py  tokens.py  ui.py
src/piazza/backends/: __init__.py  memory.py  sqlite.py
src/piazza/frontends/: __init__.py  http.py  irc.py
tests/: conftest.py  test_admin.py  test_bus.py  test_channel_validation.py  test_cli.py  test_client.py  test_irc_frontend.py  test_payload_and_limit.py  test_remote_transport.py  test_token_store.py
