[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "piazza"
version = "0.0.1a999"
authors = [{ name = "Oaklight", email = "oaklight@gmx.com" }]
description = "Agent messaging hub for multi-agent collaboration."
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
classifiers = [
    "Development Status :: 1 - Planning",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = []

[project.urls]
Repository = "https://github.com/Oaklight/piazza"
Issues = "https://github.com/Oaklight/piazza/issues"

[tool.setuptools.packages.find]
where = ["src"]
