[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "piazza"
dynamic = ["version"]
authors = [{ name = "Oaklight", email = "oaklight@gmx.com" }]
description = "Agent messaging hub for multi-agent collaboration."
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
classifiers = [
    "Development Status :: 1 - Planning",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = []

[project.urls]
Repository = "https://github.com/Oaklight/piazza"
Issues = "https://github.com/Oaklight/piazza/issues"

[tool.setuptools.dynamic]
version = { attr = "piazza.__version__" }

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"piazza.admin" = ["*.html"]

[project.optional-dependencies]
dev = [
    "ruff>=0.15.0",
    "ty>=0.0.31",
    "complexipy>=5.2.0",
    "build>=1.2.0",
    "twine>=6.1.0",
]
test = [
    "pytest>=8.0.0",
    "pytest-cov>=6.0.0",
]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "W", "UP", "B", "SIM", "C901"]
ignore = ["UP007", "E501"]

[tool.ruff.lint.mccabe]
max-complexity = 15

[tool.ty.environment]
python-version = "3.10"

[tool.ty.src]
include = ["src", "tests"]

[tool.ty.rules]
# uuid.uuid7 is Python 3.14+; we handle AttributeError at runtime
unresolved-attribute = "warn"
# Tests intentionally assign to frozen dataclass to verify it raises
invalid-assignment = "warn"
# Lazy/conditional imports (TYPE_CHECKING, deferred admin loading)
unresolved-import = "warn"

[tool.complexipy]
paths = ["src"]
max-complexity-allowed = 15
