[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "piazza-client"
dynamic = ["version"]
authors = [{ name = "Peng Ding", email = "oaklight.cn@gmail.com" }]
description = "Lightweight agent SDK for piazza message bus — zero dependencies"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Communications",
    "Topic :: Software Development :: Libraries",
]

[project.urls]
Homepage = "https://github.com/Oaklight/piazza"
Repository = "https://github.com/Oaklight/piazza"
Issues = "https://github.com/Oaklight/piazza/issues"

[project.scripts]
piazza-client = "piazza_client.cli:main"

[tool.setuptools.dynamic]
version = { attr = "piazza_client.__version__" }

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
extend-exclude = ["src/piazza_client/_vendor/"]
